messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-app
      version: blue
  template:
    metadata:
      labels:
        app: messaging-app
        version: blue
    spec:
      containers:
      - name: messaging-app
        image: messaging_app-web:2.0 #for task 5 we use 2.0 for blue green deployment latest 
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        startupProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 60
          periodSeconds: 10
          failureThreshold: 10
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 45
          periodSeconds: 20
