messaging_app/messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app
spec:
  selector:
    app: messaging-app
    version: blue     # initially route to blue deployment
  ports:
    - protocol: TCP
      port: 80         # external port
      targetPort: 8000 # container port
  type: ClusterIP
