messaging_app/messaging_app/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: messaging-mysql
spec:
  selector:
    matchLabels:
      app: messaging-mysql
  serviceName: "messaging-mysql"
  replicas: 1
  template:
    metadata:
      labels:
        app: messaging-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: messaging-mysql
spec:
  clusterIP: None  # Headless service for StatefulSet
  selector:
    app: messaging-mysql
  ports:
    - port: 3306
      targetPort: 3306
